add bean validation

--- a/LMSApplication/LMSApplication-ejb/nbproject/private/private.properties
+++ b/LMSApplication/LMSApplication-ejb/nbproject/private/private.properties
@@ -5,3 +5,4 @@ j2ee.server.home=/Users/ongyongen/glassfish5.1.0/glassfish
 j2ee.server.instance=[/Users/ongyongen/glassfish5.1.0/glassfish:/Users/ongyongen/glassfish5.1.0/glassfish/domains/domain1]deployer:gfv510ee8:localhost:4848
 j2ee.server.middleware=/Users/ongyongen/glassfish5.1.0
 netbeans.user=/Users/ongyongen/Library/Application Support/NetBeans/13
+user.properties.file=/Users/ongyongen/Library/Application Support/NetBeans/13/build.properties
