--- a/LMSApplication/LMSApplication-war/nbproject/project.properties
+++ b/LMSApplication/LMSApplication-war/nbproject/project.properties
@@ -40,6 +40,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv510ee8
 jar.compress=false
 javac.classpath=\
+    ${libs.jakartaee-api-8.0.classpath}:\
+    ${reference.LMSApplicationLibrary.jar}:\
     ${reference.LMSApplication-ejb.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -71,7 +73,9 @@ no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.LMSApplication-ejb=../LMSApplication-ejb
+project.LMSApplicationLibrary=../../LMSApplicationLibrary
 reference.LMSApplication-ejb.dist=${project.LMSApplication-ejb}/dist/LMSApplication-ejb.jar
+reference.LMSApplicationLibrary.jar=${project.LMSApplicationLibrary}/dist/LMSApplicationLibrary.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
